# watanabe-chatbot

./: README.md  dev.bash
.devcontainer/: devcontainer.json
environment/docker/mysql/: Dockerfile
environment/docker/python/: Dockerfile
environment/local/: .env.example  compose.yml
src/: .gitignore  README.md  pyproject.toml  やりとりよう.md
src/app/: llms.py  main.py  route.py
src/app/http/contoroller/: llm_controller.py
src/app/http/request/: request.py
src/app/objects/: watanabe_knowledge.py
src/app/usecase/: chat_usecase.py
