[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "ozkoharu",email = "78905667+ozkoharu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-openai (>=0.3.7,<0.4.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
